<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/fan_back_cover"
        android:layout_width="430dp"
        android:layout_height="430dp"
        android:layout_centerInParent="true"
        android:src="@drawable/fan_back_cover"
        android:contentDescription="@string/fan_back_cover_desc" />

    <ImageView
        android:id="@+id/fan_light"
        android:layout_width="410dp"
        android:layout_height="410dp"
        android:layout_centerInParent="true"
        android:src="@drawable/fan_inner_light"
        android:contentDescription="@string/fan_light_desc" />

    <ImageView
        android:id="@+id/fan_blades"
        android:layout_width="410dp"
        android:layout_height="410dp"
        android:layout_centerInParent="true"
        android:src="@drawable/fan_blades"
        android:contentDescription="@string/fan_blades_desc" />

    <ImageView
        android:id="@+id/fan_front_cover"
        android:layout_width="420dp"
        android:layout_height="420dp"
        android:layout_centerInParent="true"
        android:src="@drawable/fan_front_cover"
        android:contentDescription="@string/fan_front_cover_desc" />

    <ImageView
        android:id="@+id/indicator_light"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_centerInParent="true"
        android:src="@drawable/circle_shape_red"
        android:contentDescription="@string/indicator_light_desc" />

    <ImageView
        android:id="@+id/left_switch_base"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_toStartOf="@id/fan_back_cover"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-5dp"
        android:src="@drawable/left_switch_base"
        android:contentDescription="@string/left_switch_base_desc" />

    <ImageView
        android:id="@+id/left_switch"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/left_switch_base"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/close"
        android:contentDescription="@string/left_switch_desc" />

    <ImageView
        android:id="@+id/right_switch_base"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_toEndOf="@id/fan_back_cover"
        android:layout_centerVertical="true"
        android:layout_marginStart="-5dp"
        android:src="@drawable/right_switch_base"
        android:contentDescription="@string/right_switch_base_desc" />

    <ImageView
        android:id="@+id/right_switch"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/right_switch_base"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="188dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/close"
        android:contentDescription="@string/right_switch_desc" />

    <ImageView
        android:id="@+id/auto_switch_base"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_above="@id/fan_back_cover"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/auto_switch_base_desc"
        android:src="@drawable/auto_switch_base" />

    <ImageView
        android:id="@+id/hint_button"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_below="@id/auto_switch_base"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-65dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/hint_icon"
        android:contentDescription="@string/hint_button_desc" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignEnd="@id/left_switch_base"
        android:layout_centerVertical="true"
        android:layout_marginEnd="170dp"
        android:src="@drawable/left_arrow"
        android:contentDescription="@string/left_arrow_desc" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignStart="@id/right_switch_base"
        android:layout_centerVertical="true"
        android:layout_marginStart="170dp"
        android:src="@drawable/right_arrow"
        android:contentDescription="@string/right_arrow_desc" />

    <TextView
        android:id="@+id/cpu_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cpu_temperature_initial"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:layout_marginBottom="80dp" />

    <ImageButton
        android:id="@+id/auto_mode_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_auto_mode"
        android:contentDescription="@string/auto_mode_switch_desc" />

    <ImageButton
        android:id="@+id/temp_unit_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/auto_mode_switch"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_temperature_unit"
        android:contentDescription="@string/temp_unit_switch_desc" />
</RelativeLayout>
